// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inject after 1`] = `
Object {
  "attributes": Object {
    "after": "gem 'rails'",
  },
  "body": "
    source 'http://rubygems.org'
    gem 'rails'
    gem 'kamikaze' # added by hygen
    gem 'nokogiri'
    gem 'httparty'

    ",
}
`;

exports[`inject append 1`] = `
Object {
  "attributes": Object {
    "append": true,
  },
  "body": "
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    gem 'kamikaze' # added by hygen
    ",
}
`;

exports[`inject at_index 1`] = `
Object {
  "attributes": Object {
    "at_line": 2,
  },
  "body": "
    source 'http://rubygems.org'
    gem 'kamikaze' # added by hygen
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    ",
}
`;

exports[`inject before 1`] = `
Object {
  "attributes": Object {
    "before": "gem 'rails'",
  },
  "body": "
    source 'http://rubygems.org'
    gem 'kamikaze' # added by hygen
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    ",
}
`;

exports[`inject prepend 1`] = `
Object {
  "attributes": Object {
    "prepend": true,
  },
  "body": "
    gem 'kamikaze' # added by hygen
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    ",
}
`;

exports[`inject skip_if 1`] = `
Object {
  "attributes": Object {
    "after": "gem 'rails'",
    "skip_if": "source",
  },
  "body": "
    source 'http://rubygems.org'
    gem 'rails'
    gem 'nokogiri'
    gem 'httparty'

    ",
}
`;
